--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-<title>projekt - WEPPO</title>
+<title>Sklep</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -84,8 +84,16 @@ input#hidden {
 <section>
   <nav>
     Nazwa użytkownika: <%=nick%>
-    <a href="login">Zaloguj się</a>
-    <a href="register">Zarejestruj się</a>
+    <form method="POST" action="login">
+      Login: <input type="text" name="username">
+      Hasło: <input type="password" name="password">
+      <button>Zaloguj się</button>
+    </form>
+    <form method="POST" action="register">
+      Login: <input type="text" name="username">
+      Hasło: <input type="password" name="password">
+      <button>Zarejestruj się</button>
+    </form>
     <a href="koszyk">Koszyk</a>
   </nav>
 </section>
