Dodane logowanie, rejestracja i wylogowanie sie, narazie przyciski nie sa ukryte w zaden sposob - trzeba to zrobic, ze jak jestes zalogowany to nie ma pol do zalogowania

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,7 +94,11 @@ input#hidden {
       Hasło: <input type="password" name="password">
       <button>Zarejestruj się</button>
     </form>
+    <%= msg %>
     <a href="koszyk">Koszyk</a>
+    <form method="POST" action="logout">
+      <button> Wyloguj się</button> 
+    </form>
   </nav>
 </section>
 
