--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,26 +83,17 @@ input#hidden {
 
 <section>
   <nav>
-    <div> Nazwa użytkownika: <%= nick %> </div>
+    <div> Nazwa użytkownika: <%= username %> </div>
     <% if (!logged) { %>
-      <form method="POST" action="login">
-        Login: <input type="text" name="username">
-        Hasło: <input type="password" name="password">
-        <button>Zaloguj się</button>
-      </form>
-      <form method="POST" action="register">
-        Login: <input type="text" name="username">
-        Hasło: <input type="password" name="password">
-        <button>Zarejestruj się</button>
-      </form>
-    <% } %>
-    <div> <%= msg %> </div>
+      <a href='login'>Zaloguj się</a> 
+    <% } %>   
     <% if (logged) { %>
       <a href="cart">Koszyk</a>
+      <form method="POST" action="logout">
+        <button> Wyloguj się</button>
+      </form>
+      <div>Liczba produktów w koszyku: <%= prodAmount %></div>
     <% } %>
-    <form method="POST" action="logout">
-      <button> Wyloguj się</button> 
-    </form>
   </nav>
 </section>
 
@@ -112,22 +103,20 @@ input#hidden {
   <% items.forEach((v) => { %>
 	  <tr>
 		  <td>
-        <%=v.item%> <br> <%=v.description%>
+        <%= v.item %> <br> <%= v.description %>
 		  </td>
 		<td>
 		  <form method="POST" action="add_to_cart">
-			<div id='add_to_cart'>
-			  <input id='hidden' type='text' name='type'
-					 value='add_to_cart'>
-			  <input id='hidden' type='number' name='product_id'
-			  value='l'>
-			  <input type='number' name='amount'>
-        <% if (logged) { %>
-          <button>dodaj do koszyka</button>
-        <% } else { %>
-          <button disabled> dodaj do koszyka</button>
-        <% } %>
-			</div>
+        <div id='add_to_cart'>
+          <input id='hidden' type='text' name='type' value='add_to_cart'>
+          <input id='hidden' type='number' name='productID' value='<%= v.id %>'>
+          <input type='number' name='quantity' value=1>
+          <% if (logged) { %>
+            <button>dodaj do koszyka</button>
+          <% } else { %>
+            <button disabled> dodaj do koszyka</button>
+          <% } %>
+        </div>
 		  </form>
 		</td>
 	  </tr>
