możliwość składania zamówień

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -17,6 +17,9 @@
           </form>
         </div>
       <% }); %>
+	  <form method="POST" action="make_order">
+		<button>Złóż zamówienie</button>
+	  </form>
       <a href='/'>Strona główna</a>
     </body>
 </html>
