--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Zakończona trasakcja</title>
+    <title>404 error</title>
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
@@ -41,15 +41,11 @@
        </a>
     </div>
 
-    <div class="centeredText">
-        <h1>Dziękuje za złożenie zamówienia!</h1>
-    </div>
-    <div class="centeredText">
+    <div class="centeredText" style="padding-top: 150px;">
         <a href="/">
-            <h3>Przeglądaj produkty</h3>
+            <h3>Nie odnaleziono strony</h3>
         </a>
     </div>
-  
 
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/jquery.cycle.js"></script>
