--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Zakończona trasakcja</title>
+    <title>Kontakt</title>
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
@@ -41,15 +41,13 @@
        </a>
     </div>
 
-    <div class="centeredText">
-        <h1>Dziękuje za złożenie zamówienia!</h1>
+    <div class="centeredText" style="padding-top: 150px; line-height: 3.5em;">
+        <h3>
+            <div>Hubert Obrzut</div>
+            <div>Telefon: 530 005 229</div>
+            <div>Email: skoczek133@gmail.com</div>
+        </h3>
     </div>
-    <div class="centeredText">
-        <a href="/">
-            <h3>Przeglądaj produkty</h3>
-        </a>
-    </div>
-  
 
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/jquery.cycle.js"></script>
