--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,171 +1,184 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html lang="pl">
-<html xmlns="http://www.w3.org/1999/xhtml">
-
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-
-  <link href="templatemo_style.css" rel="stylesheet" type="text/css" />
-
-  <title>Book Store Template, Free CSS Template, CSS Website Layout</title>
-
+	<title>Sklep</title>
+	<link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
-
 <body>
-  <!--  Free CSS Templates from www.templatemo.com -->
-  <div id="templatemo_container">
-	<div id="templatemo_menu">
-	  <ul>
-		<li> User name: <%= username %> </li>
-		<% if (!logged) { %>
-		<li><a href='login'>Log in</a></li>
-		  <% } %>
-		<% if (logged) { %>
-		<li><a href="cart">Cart</a></li>
-		<li><a href="logout">Log out</li>
-      <li>Items in cart: <%= prodAmount %></li>
-    <% } %>
-    <% if (privileged) { %>
-	<li><a href='users'>list of users</a></li>
-	<li><a href='products'>products</a></li>
-	<li><a href='orders'>orders</a></li>
-    <% } %>
+	<div class="topbar">
+		<div class="container">
 
-    	</ul>
-    </div> <!-- end of menu -->
-    
-    <div id="templatemo_header">
-    	<div id="templatemo_special_offers">
-        	<p>
-                <span>25%</span> discounts for
-        purchase over $80
-        	</p>
-			<a href="subpage.html" style="margin-left: 50px;">Read more...</a>
-        </div>
-        
-        
-        <div id="templatemo_new_books">
-        	<ul>
-                <li>Suspen disse</li>
-                <li>Maece nas metus</li>
-                <li>In sed risus ac feli</li>
-            </ul>
-            <a href="subpage.html" style="margin-left: 50px;">Read more...</a>
-        </div>
-    </div> <!-- end of header -->
-    
-    <div id="templatemo_content">
-    	
-        <div id="templatemo_content_left">
-        	<div class="templatemo_content_left_section">
-            	<h1>Search</h1>
-				<form method="POST" action="query">
-                <ul>
-				  <li>
-					<input type="text" name="query_key">
-				  </li>
-				  <li>
-					search by
-				  </li>
-				  <li>
-					<select name="query_type">
-					  <option value="name">Name</option>
-					  <option value="desc">Description</option>
-					</select>
-				  </li>
-				  <li>
-					<button>Search</button>
-				  </li> 
-            	</ul>
-				</form>
-            </div>
-			<div class="templatemo_content_left_section">
-            	<h1>Bestsellers</h1>
-                <ul>
-                    <li><a href="#">Vestibulum ullamcorper</a></li>
-                    <li><a href="#">Maece nas metus</a></li>
-                    <li><a href="#">In sed risus ac feli</a></li>
-                    <li><a href="#">Praesent mattis varius</a></li>
-                    <li><a href="#">Maece nas metus</a></li>
-                    <li><a href="#">In sed risus ac feli</a></li>
-                    <li><a href="#">Flash Templates</a></li>
-                    <li><a href="#">CSS Templates</a></li>
-                    <li><a href="#">Web Design</a></li>
-                    <li><a href="http://www.photovaco.com" target="_parent">Free Photos</a></li>
-            	</ul>
-            </div>
-            
-            <div class="templatemo_content_left_section">                
-                <a href="http://validator.w3.org/check?uri=referer"><img style="border:0;width:88px;height:31px" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" width="88" height="31" vspace="8" border="0" /></a>
-<a href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px"  src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" vspace="8" border="0" /></a>
-			</div>
-        </div> <!-- end of content left -->
-        
-        <div id="templatemo_content_right">
-		  <% var item_number = 0 %>
-		  <% items.forEach((v) => {
-		  item_number += 1; %>
-        	<div class="templatemo_product_box">
-			  <h1><%= v.item %> <span>(by <%= v.author %>)</span></h1>
-			  <img src=<%= v.image %> alt="image" />
-                <div class="product_info">
-				  <p><%= v.description_short %></p>
-				  <h3><%= v.price %></h3>
-				  <form method="POST" action="add_to_cart">
-					<input id="hidden" type="text" name="type"
-												   value="add_to_cart">
-					<input id="hidden" type="number" name="productID"
-													 value="<%= v.id %>">
-					<input id="hidden" type="number" name="quantity"
-													 value=1>
-					<% if (logged) { %>
-                    <div class="buy_now_button">
-					  <button>Add to cart</button>
-					</div>
-					<% } else { %>
-                    <div class="buy_now_button" disabled>
-					  <button disabled>Add to cart</button>
-					</div>
+			<div class="topcenter">
+				<ul>
+					<li><a href="/">Strong główna</a></li>
+					<li><a href="contact">Kontakt</a></li>
+					<% if (privileged) { %>
+						<li><a href='users'>Użytkownicy</a></li>
+						<li><a href='products'>Produkty</a></li>
+						<li><a href='orders'>Zamówienia</a></li>
 					<% } %>
-				  </form>
+				</ul>
+			</div>
 
-                    <div class="detail_button"><a href="subpage.html">Detail</a></div>
-                </div>
-                <div class="cleaner">&nbsp;</div>
-            </div>
-            
-			<% if((item_number % 2) == 1) { %>
-			<div class="cleaner_with_width">&nbsp;</div>
-			<% } %>
+			<div class="topright">
+				<ul>
+					<li><a href="#"><i class="fas fa-phone"></i> (+48)123456789</a></li>
+					<li>Nazwa użytkownika: <%= username %></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 
-			<% if((item_number % 2) == 0) { %>
-            <div class="cleaner_with_height">&nbsp;</div>
-			<% } %>
+	<div class="header">
+		<div class="container">
 
-			<% }) %>
-            
-            <a href="subpage.html"><img src="images/templatemo_ads.jpg" alt="ads" /></a>
-        </div> <!-- end of content right -->
-    
-    	<div class="cleaner_with_height">&nbsp;</div>
-    </div> <!-- end of content -->
-    
-    <div id="templatemo_footer">
-    
-	       <a href="subpage.html">Home</a> | <a href="subpage.html">Search</a> | <a href="subpage.html">Books</a> | <a href="#">New Releases</a> | <a href="#">FAQs</a> | <a href="#">Contact Us</a><br />
-        Copyright © 2024 <a href="#"><strong>Your Company Name</strong></a> 
-        <!-- Credit: www.templatemo.com -->	</div> 
-    <!-- end of footer -->
-<!--  Free CSS Template www.templatemo.com -->
-</div> <!-- end of container -->
-<!-- templatemo 086 book store -->
-<!-- 
-Book Store Template 
-http://www.templatemo.com/preview/templatemo_086_book_store 
--->
+			<div class="logo">
+				<img src="images/logo.png">
+			</div>
+
+			<div class="searchbar">
+				<form method="POST" action="query">
+					<div class="form-inline">
+						<input class="form-control mr-1" type="text" name="search" placeholder="Szukaj" style="width: 400px;">
+						<button class="btn btn-primary" style="background-color: orange; border-color:orange;">Szukaj</button>
+					</div>
+				</form>
+			</div>
+
+			<div class="headerright">
+				<ul>
+					<% if (!logged) { %>
+						<li><a href="login" class="signBtn">Logowanie i Rejestracja</a></li>
+					<% } else { %>
+						<li><a href="cart"><i class="fas fa-shopping-cart"></i>Koszyk(<%= prodAmount %>)</a></li>
+						<li><a href="logout" class="signBtn">Wyloguj się</a></li>
+					<% } %>
+				</ul>
+			</div>
+		</div>
+	</div>
+	
+	<!-- Product Area Start -->
+	<div class="product-area">
+		<div class="container">
+			<h3>Produkty</h3>
+			<% items.forEach((v) => { %>
+				<div class="col-3">
+					<a href="#">
+						<img src="<%= v.image %>" alt="" style="width: 1000px;">
+						<div class="caption">
+							<big>Kod: <%= v.code %></big>
+							<h4><%= v.name %></h4>
+							<button class="price"><%= v.price %> zł</button>
+						</div>
+						<form method="POST" action="add_to_cart">
+							<input hidden="true" type="number" name="productID" value="<%= v.id %>">
+							<input hidden="true" type="number" name="quantity" value=1>
+							<% if (logged) { %>
+								<input class="submitBtn" 
+									   style="width: 90%;"
+									   type="submit" 
+									   value="Dodaj do koszyka">
+							<% } %>
+						</form>
+					</a>
+				</div>
+			<% }); %>
+		</div>
+	</div>
+	<!-- Product Area End -->
+
+	<!-- Product View Box / Quick Product View Start -->
+	<div class="productViewBox">
+		<h3>Apple Macbook Pro MQ032 14.5' Inter Core i7 5550U 8GB DDR3</h3>
+		<div class="productViewBox-closeBtn"><i class="fas fa-times"></i></div>
+		<div class="productViewBoxImg">
+			<img src="images/img1.jpg">
+		</div>
+		<div class="productViewBoxDetail">
+			<h5><b>Cena : </b>598 zł</h5>
+			<h5><b>Gwarancja : </b> 12 miesięcy</h5>
+			<h5><b>Dostawa : </b> GRATIS</h5>
+			<h5><b>Metody płatności : </b> COD, Visa, Mastercard, Debit, Credit</h5>
+			<h5><b>Dostępność : </b> dostępny</h5>
+			<h5><b>Kod produktu : </b> GA000006488</h5>
+			<button class="addtocart"><i class="fas fa-shopping-cart"></i> Dodaj do koszyka</a></button>
+		</div>
+	</div>
+	<!-- Product View Box / Quick Product View End -->
+
+<!-- Jquery V.3.3.1 -->
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/jquery.cycle.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script>
+	$("#sliderShuffle").cycle({
+		next: '#next',
+		prev: '#prev'
+	});
+	
+	$('.owl-carousel').owlCarousel({
+		items:4,
+		loop:true,
+		margin:15,
+		autoplay:true,
+		autoplayTimeout:3000, //3 Second
+		nav:true,
+		responsiveClass:true,
+		responsive:{
+			0:{
+				items:1,
+				nav:true
+			},
+			600:{
+				items:3,
+				nav:true
+			},
+			1000:{
+				items:4,
+				nav:true
+			}
+		}
+
+	});
+
+	$(function(){
+		$(".topbar ul li").click(function(){
+			$(".topbar ul li").not(this).find("ul").slideUp();
+			$(this).find("ul").slideToggle();
+		});
+		$(".topbar ul li ul li, productCategories ul li .megamenu").click(function(e){
+			e.stopPropagation();	
+		});
+		$(".productCategories ul li").click(function(){
+			$(".productCategories ul li").not(this).find(".megamenu").hide();
+			$(this).find(".megamenu").toggle();
+		});
+		$(".otherInfoBody").hide();
+		$(".otherInfoHandle").click(function(){
+			$(".otherInfoBody").slideToggle();
+		});
+		$(".signBtn").click(function(){
+			$("body").css("overflow", "hidden");
+			$(".loginBox").slideDown();
+		});
+		$(".closeBtn").click(function(){
+			$("body").css("overflow", "visible");
+			$(".loginBox").slideUp();
+		});
+		$(".productViewBtn").click(function(e){
+			e.preventDefault();
+			$("body").css("overflow", "hidden");
+			$(".productViewBox").slideDown();
+		});
+		$(".productViewBox-closeBtn").click(function(){
+			$("body").css("overflow", "visible");
+			$(".productViewBox").slideUp();
+		});
+	});
+</script>
 </body>
 </html>
