--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,119 +1,70 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html lang="pl">
-<html xmlns="http://www.w3.org/1999/xhtml">
+ <!DOCTYPE html>
+ <html>
+ <head>
+     <title>Strona logowania</title>
+     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+     <link rel="stylesheet" type="text/css" href="css/style.css">
+     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
+ </head>
+ <body>
+     <div class="topbar">
+         <div class="container">
+              
+             <div class="topcenter">
+                 <ul>
+                     <li><a href="/">Strong główna</a></li>
+                     <li><a href="contact">Kontakt</a></li>
+                     <% if (privileged) { %>
+						<li><a href='users'>Użytkownicy</a></li>
+						<li><a href='products'>Produkty</a></li>
+						<li><a href='orders'>Zamówienia</a></li>
+					<% } %>                 </ul>
+             </div>
+ 
+             <div class="topright">
+                 <ul>
+                     <li><a href="#"><i class="fas fa-phone"></i> (+48)123456789</a></li>
+                     <li>Nazwa użytkownika: <%= username %></li>
+                 </ul>
+             </div>
+         </div>
+     </div>
+ 
+     <div class="header">
+         <a href="/">
+            <div class="container">
+                <div class="logo">
+                    <img src="images/logo.png">
+                </div>
+            </div>
+        </a>
+     </div>
+     
+     <div class="container" style="width: 30%;"> 
+        <!-- <h1 style="font-size: 20px">Logowanie</h1> -->
+        <div class="text"><h3>Logowanie</h3></div>
+        <form method="POST" action="login">
+            <input class="textField" type="text" placeholder="Nazwa użytkownika" name="username">
+            <input class="textField" type="password" placeholder="Hasło" name="password">
+            <input class="submitBtn" type="submit" value="Zaloguj się">
+        </form>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-
-  <link href="templatemo_style.css" rel="stylesheet" type="text/css" />
-
-  <title>Login page</title>
-</head>
-
-<body>
-  <!--  Free CSS Templates from www.templatemo.com -->
-  <div id="templatemo_container">
-	<div id="templatemo_menu">
-	  <ul>
-		<li><a href='/'>Main page</a></li>
-	  </ul>
-    </div> <!-- end of menu -->
-    
-    <div id="templatemo_header">
-    	<div id="templatemo_special_offers">
-        	<p>
-                <span>25%</span> discounts for
-        purchase over $80
-        	</p>
-			<a href="subpage.html" style="margin-left: 50px;">Read more...</a>
+        <br>
+        <div style="color:red">
+            <%= msg %>
         </div>
-        
-        
-        <div id="templatemo_new_books">
-        	<ul>
-                <li>Suspen disse</li>
-                <li>Maece nas metus</li>
-                <li>In sed risus ac feli</li>
-            </ul>
-            <a href="subpage.html" style="margin-left: 50px;">Read more...</a>
-        </div>
-    </div> <!-- end of header -->
-    
-    <div id="templatemo_content">        
-	  <div id="templatemo_content_login">
-            <div class="templatemo_content_login_section">
-                <ul>
-				  <li><h1>Register</h1></li>
-				  <form method="POST" action='register'>
-					<li>
-						Login: <input type='text' name='username'>
-						Password: <input type='password' name='password'>
-						<button>Register</button>
-					</li>
-				  </form>
-				</ul>
-			</div>
-			<div class="templatemo_content_login_section">
-			  <ul>
-				<li><h1>Log in</h1></li>
-            <form method="POST" action='login'>
-			  <li>
-                Login: <input type='text' name='username'>
-                Password: <input type='password' name='password'>
-                <button>Log in</button>
-			  </li>
-			  </ul>
-            </form>
-			</div>
-			<% if (msg != "") { %>
-			<div class="templatemo_content_login_section">
-			  <%= msg %>
-			</div>
-			<% } %>
+        <br>
 
-            </div> <!-- end of content left section -->
-        </div> <!-- end of content left -->
-
-        <div class="cleaner_with_height">&nbsp;</div>
-
-<!--	  <div class="templatemo_content_mid">
-        Zarejestruj się:
-        <div>
-            <form method="POST" action='register'>
-                Login: <input type='text' name='username'>
-                Hasło: <input type='password' name='password'>
-                <button>Zarejestruj się</button>
-            </form>
-        </div>
-        Zaloguj się:
-        <div>
-            <form method="POST" action='login'>
-                Login: <input type='text' name='username'>
-                Hasło: <input type='password' name='password'>
-                <button>Zaloguj się</button>
-            </form>
-        </div>
-        <%= msg %>
-	  </div>
--->
-    </div> <!-- end of content -->
-    
-    <div id="templatemo_footer">
-    
-	       <a href="subpage.html">Home</a> | <a href="subpage.html">Search</a> | <a href="subpage.html">Books</a> | <a href="#">New Releases</a> | <a href="#">FAQs</a> | <a href="#">Contact Us</a><br />
-        Copyright © 2024 <a href="#"><strong>Your Company Name</strong></a> 
-        <!-- Credit: www.templatemo.com -->	</div> 
-    <!-- end of footer -->
-<!--  Free CSS Template www.templatemo.com -->
-</div> <!-- end of container -->
-<!-- templatemo 086 book store -->
-<!-- 
-Book Store Template 
-http://www.templatemo.com/preview/templatemo_086_book_store 
--->
-</body>
-</html>
+        <div class="text"><h3>Rejestracja</h3></div>
+        <form method="POST" action="register">
+            <input class="textField" type="text" placeholder="Nazwa użytkownika" name="username">
+            <input class="textField" type="password" placeholder="Hasło" name="password">
+            <input class="submitBtn" type="submit" value="Zarejestruj się">
+        </form>          
+    </div>   
+ 
+ <script src="js/jquery-3.3.1.min.js"></script>
+ <script src="js/jquery.cycle.js"></script>
+ <script src="js/owl.carousel.min.js"></script>
+ </body>
+ </html>
