--- a/views/users.ejs
+++ b/views/users.ejs
@@ -1,82 +1,71 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html lang="pl">
-<html xmlns="http://www.w3.org/1999/xhtml">
-
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-
-  <link href="templatemo_style.css" rel="stylesheet" type="text/css" />
-
-  <title>List of users</title>
-
+    <title>Użytkownicy</title>
+    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
-
 <body>
-  <!--  Free CSS Templates from www.templatemo.com -->
-  <div id="templatemo_container">
-	<div id="templatemo_menu">
-	  <ul>
-		<li><a href='/'>Main page</a></li>
-		<li> User name: <%= username %> </li>
-		<li><a href="logout">Log out</li>
-	<li><a href='users'>List of users</a></li>
-	<li><a href='products'>products</a></li>
-	<li><a href='orders'>orders</a></li>
-
-    	</ul>
-    </div> <!-- end of menu -->
-    
-    <div id="templatemo_header">
-    	<div id="templatemo_special_offers">
-        	<p>
-                <span>25%</span> discounts for
-        purchase over $80
-        	</p>
-			<a href="subpage.html" style="margin-left: 50px;">Read more...</a>
-        </div>
-        
-        
-        <div id="templatemo_new_books">
-        	<ul>
-                <li>Suspen disse</li>
-                <li>Maece nas metus</li>
-                <li>In sed risus ac feli</li>
-            </ul>
-            <a href="subpage.html" style="margin-left: 50px;">Read more...</a>
-        </div>
-    </div> <!-- end of header -->
-    
-    <div id="templatemo_content">
-        <div id="templatemo_content_users">
-            <div class="templatemo_content_mid_section">
-                <h1>List of users</h1>
+    <div class="topbar">
+      <div class="container">
+            
+            <div class="topcenter">
                 <ul>
-				  <% users.forEach((p) => { %>
-				  <li> <%= p.nick %> </li>
-				  <% }); %>
-				</ul>
-			</div> <!-- end of content left section -->
-        </div> <!-- end of content left -->
+                    <li><a href="/">Strong główna</a></li>
+                    <li><a href="contact">Kontakt</a></li>
+                    <% if (privileged) { %>
+                      <li><a href='users'>Użytkownicy</a></li>
+                      <li><a href='products'>Produkty</a></li>
+                      <li><a href='orders'>Zamówienia</a></li>
+                    <% } %>
+                  </ul>
+            </div>
 
-    	<div class="cleaner_with_height">&nbsp;</div>
-    </div> <!-- end of content -->
-    
-    <div id="templatemo_footer">
-    
-	       <a href="subpage.html">Home</a> | <a href="subpage.html">Search</a> | <a href="subpage.html">Books</a> | <a href="#">New Releases</a> | <a href="#">FAQs</a> | <a href="#">Contact Us</a><br />
-        Copyright © 2024 <a href="#"><strong>Your Company Name</strong></a> 
-        <!-- Credit: www.templatemo.com -->	</div> 
-    <!-- end of footer -->
-<!--  Free CSS Template www.templatemo.com -->
-</div> <!-- end of container -->
-<!-- templatemo 086 book store -->
-<!-- 
-Book Store Template 
-http://www.templatemo.com/preview/templatemo_086_book_store 
--->
+            <div class="topright">
+                <ul>
+                    <li><a href="#"><i class="fas fa-phone"></i> (+48)123456789</a></li>
+                    <li>Nazwa użytkownika: <%= username %></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="header">
+        <a href="/">
+          <div class="container">
+              <div class="logo">
+                  <img src="images/logo.png">
+              </div>
+          </div>
+      </a>
+    </div>
+
+    <div style="padding: 200px;">
+        <table class="table">
+          <thead class="thead-light">
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Nazwa Użytkownika</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% var id = 1; %>
+            <% users.forEach((u) => { %>
+                <tr>
+                    <th scope="row"><%= id %></th>
+                    <th><%= u.username %></th>
+                </tr>
+                <% ++id %>
+            <% }); %>
+          </tbody>
+        </table>
+    </div>
+
+
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/jquery.cycle.js"></script>
+<script src="js/owl.carousel.min.js"></script>
 </body>
 </html>
